@@ -15,6 +15,13 @@ director=VideoDevil
 icon=video.devil.image|pornotube.png
 url=pornotube.com.cfg
 ########################################################
+title=YouJizz
+type=rss
+genre=YouJizz
+director=VideoDevil
+icon=video.devil.image|youjizz.png
+url=youjizz.com.cfg
+########################################################
 title=GirlfriendVideos
 type=rss
 genre=GirlfriendVideos
