@@ -17,14 +17,9 @@ item_url_build=http://xhamster.com%s
 ########################################################
 # Categories
 ########################################################
-item_infos=&nbsp;&nbsp;<a href="(/channels/[^"]+)"><b>([^<]+)</b></a><BR>
-item_order=url|title
-item_skill=directory
-item_curr=href="/rss/([^"]+)"
-item_info_name=title
-item_info_build=video.devil.locale|30100
-item_info_name=icon
-item_info_build=video.devil.image|face_devil_grin.png
+item_infos=<a href="(/channels/[^"]+)">.+?<img src="(http[^"]+jpg)".+?align="[^"]+">([^"]+ [(][^"]+[)])</div>
+item_order=url|icon|title
+item_skill=rss
 item_url_build=http://xhamster.com%s
 ########################################################
 # Subcategories
@@ -57,6 +52,13 @@ item_info_build=video.devil.locale|30109
 item_info_name=icon
 item_info_build=video.devil.image|face_kiss.png
 item_url_build=http://xhamster.com/%s
+########################################################
+# Direct Links
+########################################################
+title=video.devil.locale|30100
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://xhamster.com/channels.php
 ########################################################
 # Next
 ########################################################
